--- a/protobuf.csproj
+++ b/protobuf.csproj
@@ -15,4 +15,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="protos/employee.proto"/>
+  </ItemGroup>
+
+
 </Project>
